--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,7 +4,7 @@ services:
     ports:
       - "5050:5050" 
     networks:
-      - mern_network
+      - mern
     environment:
       MONGO_URI: mongodb://mongo:27017/mydatabase  
     depends_on:
@@ -15,7 +15,7 @@ services:
     ports:
       - "5173:5173"  
     networks:
-      - mern_network
+      - mern
     environment:
       REACT_APP_API_URL: http://backend:5050 
 
@@ -24,12 +24,12 @@ services:
     ports:
       - "27017:27017"  
     networks:
-      - mern_network
+      - mern
     volumes:
       - mongo-data:/data/db  
 
 networks:
-  mern_network:
+  mern:
     driver: bridge 
 
 volumes:
